Blender does not remember name of last saved picture #24554

Closed
opened 2010-11-05 12:24:26 +01:00 by Denis Russkih · 3 comments

%%%Very useful thing has been crashed.

Blender 2.49b (perfectly):
I press F12 to render, then press F3 to save picture, enter name "pic1.png" and press "Enter". If I press F3 again, I see name of last saved picture: "pic1.png". I can simply press "+" button, and name will be incremented: "pic2.png". This is very cool, fast save in 3 buttons: "F3", "+", "Enter".

Blender 2.55 Beta:
I press F12 to render, then press F3 to save picture, enter name "pic1.png" and press enter. If I press F3 again, I see blank ".png" without last used name and path! Every time I need to enter the name again. Very, very sad.

Please cure Blender 2.5x of the amnesia! :) %%%

%%%Very useful thing has been crashed. Blender 2.49b (perfectly): I press F12 to render, then press F3 to save picture, enter name "pic1.png" and press "Enter". If I press F3 again, I see name of last saved picture: "pic1.png". I can simply press "+" button, and name will be incremented: "pic2.png". This is very cool, fast save in 3 buttons: "F3", "+", "Enter". Blender 2.55 Beta: I press F12 to render, then press F3 to save picture, enter name "pic1.png" and press enter. If I press F3 again, I see blank ".png" without last used name and path! Every time I need to enter the name again. Very, very sad. Please cure Blender 2.5x of the amnesia! :) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Fixed in SVN. Rev. 32920.

NOTE: If you use 'Save Copy' the name of the internal Blender image will be used.

Thanks for reporting.
%%%

%%%Fixed in SVN. Rev. 32920. NOTE: If you use 'Save Copy' the name of the internal Blender image will be used. Thanks for reporting. %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#24554
No description provided.