fix [#24554] Blender does not remember name of last saved picture * image name is now set when the file is actually saved if it is empty. Otherwise it is only changed if we're not saving a copy. * If previous image name is empty, filename will be 'untitled.png' for png saving.

NOTE: if we saved a copy of 'render.png' as render1.png, the save image dialog will be re-opened with the image name that Blender has (render.png) rather than render1.png.